--- a/app/src/main/res/menu/settings.xml
+++ b/app/src/main/res/menu/settings.xml
@@ -1,9 +1,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.pefoley.weedroid.app.MainActivity">
+    tools:context="com.pefoley.weedroid.app.SettingsActivity">
 
     <item
         android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings" />
+        android:title="@string/action_settings"
+        android:orderInCategory="100" />
 </menu>
